--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -6,12 +6,29 @@ author_profile: true
 ---
 ## Teaching
 
-## The Hong Kong Academy for Gifted Education
-* HUMS2840 Communication Course (Level 2): Talk Like a TEDx Speaker (Evaluation: 3.4/4.0)
-* Journalism Course (Level II): Introduction to Citizen Journalism (E2JOU001C) (Evaluation: 3.7/4.0)
+Teaching
 ======
+ 
+University of Wisconsin–Madison (Teaching Assistant & Tutor)
+======
+* JOURN202 Mass Communication Practices (2024-25 Fall; 2024-25 Spring)
+  * Build increasingly sophisticated communication skills, including writing, editing, gathering information, working with data, and presenting stories through varying media forms. Develop an appreciation of how different media influence message design by communicators and reception by audiences. Develop a complex toolkit of conceptual and practical skills for media work in journalism, strategic communication, and hybrids. Build writing skills and critical thinking abilities, two elements common to success in any field.
 
-## The Chinese University of Hong Kong: 
-* COMM 2160 Communication Research Methods (2022-23 Spring)
-* COMM 3193, Film, Television and Hong Kong Culture (2022-23 Fall), Best TA Award (evaluation: 5.4/6.0)  
+The Chinese University of Hong Kong (Teaching Assistant & Tutor)
 ======
+* COMM2160 Communication Research Methods (2022-23 Spring; 2023-24 Spring)
+  * This is an introductory course designed to provide students with no prior training in social science research with an understanding and hands-on experience of the scientific research process. This course will emphasize the quantitative methods used by communication researchers to gather research evidence -- the survey, experiments and content analysis. Upon completion of this course, students are expected to be able to evaluate different kinds of research and news report outputs, such as opinion polls, marketing and advertising reports, newspaper articles as well as academic papers. Moreover, students will have the ability to conduct research systematically from designing to implementation and finally reporting.
+* COMM3193/ UGEC3635, Film, Television and Hong Kong Culture (2022-23 Fall; 2023-24 Fall)
+  * This is a course on the ‘rise’ and ‘fall’ and the ‘re-emergence’ of Hong Kong culture. It focuses on the role of television and film in cultural formation and maintenance. Various movie and television texts will serve as the basis of discussion on the prominent features of Hong Kong culture. Lectures will be conducted in a problem-based approach, while tutorial, presentation, analytical writing, screening, critical thinking, and group discussion will be the core activities of the course.
+
+City University of Hong Kong (Teaching Assistant)
+======
+* COM3117 Media, Communication and Public Opinion
+  * This seminar aims to describe, evaluate, and critique the literature on the role of mass media in public opinion formation and change. By the end of the semester, the students are expected to demonstrate the ability to evaluate research concepts and perspectives, and furthermore apply them to actual research projects.
+
+The Hong Kong Academy for Gifted Education (Instructor)
+======
+* E2JOU001C Journalism Course (Level II): Introduction to Citizen Journalism
+  * This course is designed to prepare secondary students in Hong Kong to work as local citizen journalists in the context of emerging personalised media. In the age of digital communication, personalized media devices have empowered citizens to be actively engaged in public affairs in their everyday life. On a daily basis, hundreds of thousands of ordinary people in have turned to social network platforms, to express their views or report on various issues in an unprecedented scale and intensity. The interplay between citizen participation in public affairs and journalism in Hong Kong and Greater China is particularly acute, given the increasing controversies in issues such as public 2 transportation, urban development, public health, and elections in recent years. It is therefore theoretically critical and practically important that students become aware of such journalistic practices and their impact on the structure and processes of social activism, political involvement and public life in general and in Hong Kong in particular.
+* HUMS2840 Communication Course (Level II): Talk Like a TEDx Speaker
+  * An inspiring and influential speech always has a lot more to do with knowledge. People will follow you if they are deeply moved by your words. TED and TEDx talks are delivering influential messages to the world through various channels. In this program, an experienced TEDx speaker will guide you to master an influencing and inspiring TED talk. Act now, join us, make yourself a better speaker.
