--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -3,8 +3,10 @@ layout: archive
 title: "Teaching"
 permalink: /teaching/
 author_profile: true
+redirect_from: 
+  - "/teaching/"
+  - "/teaching.html"
 ---
-## Teaching
 
 Teaching
 ======
