--- a/_pages/radio.html
+++ b/_pages/radio.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
-title: "Radio"
-permalink: /radio/
+title: "Radio experie"
+permalink: /radioex/
 author_profile: true
 redirect_from: 
   - "/radio/"
